--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
-    context-path: /teacher
+    context-path: /aioffice
 spring:
   profiles:
     active: dev
